Fixed wrong margin on the header.

--- a/src/header/header.scss
+++ b/src/header/header.scss
@@ -1,3 +1,6 @@
+body {
+    margin: 8px 0 8px 8px;
+}
 .header {
     display: flex;
     align-items: center;
